Outliner visibility keying doesn't carry over from 2.79b #72625

Closed
opened 2019-12-21 14:47:50 +01:00 by ChristopherAnderssarian · 8 comments

System Information
Operating system: Windows 7
GPU: Radeon Vega 64, Divider version: 19.12.2
CPU: Intel Core i7-5960X

Blender Version

Broken: blender-2.80-f6cb5f54494e-windows64 (official release) and after
Working: blender-2.79b-f4dc9f9d68b-windows64 (official release)

Short description of error

Object's viewport visibility keying doesn't work when opening in 2.8x

Exact steps for others to reproduce the error

Open:
Visibility Keying.blend

In 2.8x the object's last state is in effect with no animation

Exact steps for others to reproduce the error from scratch

Key an object's viewport visibility in 2.7x then open in 2.8x

**System Information** Operating system: Windows 7 GPU: Radeon Vega 64, Divider version: 19.12.2 CPU: Intel Core i7-5960X **Blender Version** Broken: `blender-2.80-f6cb5f54494e-windows64` (official release) and after Working: `blender-2.79b-f4dc9f9d68b-windows64` (official release) **Short description of error** Object's viewport visibility keying doesn't work when opening in 2.8x **Exact steps for others to reproduce the error** Open: [Visibility Keying.blend](https://archive.blender.org/developer/F8239242/Visibility_Keying.blend) In 2.8x the object's last state is in effect with no animation **Exact steps for others to reproduce the error from scratch** Key an object's viewport visibility in 2.7x then open in 2.8x

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Member

@Sergey is that a known limitation?

@Sergey is that a known limitation?

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

The visibility properties were refactored in 2.80, and this particular one was not simply renamed from hide to hide_viewport, but introduced as a new property (5e968a996a). The effect on animation data likely was an oversight.

Changing the FCurve's data path from hide to hide_viewport resolves this, so this should just be added to the versioning code.

The visibility properties were refactored in 2.80, and this particular one was **not** simply renamed from `hide` to `hide_viewport`, but introduced as a new property (5e968a996a). The effect on animation data likely was an oversight. Changing the FCurve's data path from `hide` to `hide_viewport` resolves this, so this should just be added to the versioning code.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-01-14 16:55:40 +01:00

This issue was referenced by a560a46f32

This issue was referenced by a560a46f32f6d0e9862bb30dab05296cee98b05b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72625
No description provided.